# anibridge-plex-hama-provider

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: anibridge_plex_hama_provider
src/anibridge_plex_provider/: client.py  community.py  library.py  utils.py
tests/: test_client.py  test_client_module.py  test_community.py  test_community_client.py  test_library.py  test_library_provider.py  test_utils.py  test_utils_module.py  test_webhook.py
typings/plexapi/: __init__.pyi  base.pyi  library.pyi  media.pyi  myplex.pyi  server.pyi  settings.pyi  utils.pyi  video.pyi
