[project]
name = "anibridge-plex-provider"
version = "0.2.0b11"
description = "Plex provider for the AniBridge project."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = ["anibridge", "plex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.13.3",
    "anibridge-library-base>=0.2.0b6",
    "anibridge-utils>=0.2.0b5",
    "plexapi>=4.18.0",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
]

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
asyncio_mode = "auto"

[tool.uv.build-backend]
module-name = "anibridge"
namespace = true

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.22",
]
